--- a/Fase_3_Cristian_Perez.ipynb
+++ b/Fase_3_Cristian_Perez.ipynb
@@ -2,19 +2,409 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID_Campaña</th>\n",
+       "      <th>Nombre</th>\n",
+       "      <th>Fecha_Inicio</th>\n",
+       "      <th>Fecha_Fin</th>\n",
+       "      <th>Plataforma</th>\n",
+       "      <th>Presupuesto</th>\n",
+       "      <th>Objetivo</th>\n",
+       "      <th>Tipo_Campaña</th>\n",
+       "      <th>Estado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Campaña Verano 2023</td>\n",
+       "      <td>1/06/2023</td>\n",
+       "      <td>30/06/2023</td>\n",
+       "      <td>Google Ads</td>\n",
+       "      <td>$ 1.200</td>\n",
+       "      <td>Aumentar ventas</td>\n",
+       "      <td>Búsqueda</td>\n",
+       "      <td>Finalizada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Campaña Redes Sociales</td>\n",
+       "      <td>10/07/2023</td>\n",
+       "      <td>25/07/2023</td>\n",
+       "      <td>Facebook Ads</td>\n",
+       "      <td>$ 800</td>\n",
+       "      <td>Generar engagement</td>\n",
+       "      <td>Redes Sociales</td>\n",
+       "      <td>Finalizada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Campaña Lanzamiento Producto</td>\n",
+       "      <td>15/08/2023</td>\n",
+       "      <td>30/08/2023</td>\n",
+       "      <td>Instagram Ads</td>\n",
+       "      <td>$ 1.500</td>\n",
+       "      <td>Promocionar nuevo producto</td>\n",
+       "      <td>Redes Sociales</td>\n",
+       "      <td>En Curso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Campaña Regreso a Clases</td>\n",
+       "      <td>1/09/2023</td>\n",
+       "      <td>15/09/2023</td>\n",
+       "      <td>Google Ads</td>\n",
+       "      <td>$ 1.000</td>\n",
+       "      <td>Aumentar tráfico</td>\n",
+       "      <td>Búsqueda</td>\n",
+       "      <td>Planificada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Campaña Otoño 2023</td>\n",
+       "      <td>1/01/2023</td>\n",
+       "      <td>31/10/2023</td>\n",
+       "      <td>Correo Electrónico</td>\n",
+       "      <td>$ 600</td>\n",
+       "      <td>Fomentar compras</td>\n",
+       "      <td>Email Marketing</td>\n",
+       "      <td>En Curso</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID_Campaña                        Nombre Fecha_Inicio   Fecha_Fin  \\\n",
+       "0           1           Campaña Verano 2023    1/06/2023  30/06/2023   \n",
+       "1           2        Campaña Redes Sociales   10/07/2023  25/07/2023   \n",
+       "2           3  Campaña Lanzamiento Producto   15/08/2023  30/08/2023   \n",
+       "3           4      Campaña Regreso a Clases    1/09/2023  15/09/2023   \n",
+       "4           5            Campaña Otoño 2023    1/01/2023  31/10/2023   \n",
+       "\n",
+       "           Plataforma Presupuesto                    Objetivo  \\\n",
+       "0          Google Ads     $ 1.200             Aumentar ventas   \n",
+       "1        Facebook Ads       $ 800          Generar engagement   \n",
+       "2       Instagram Ads     $ 1.500  Promocionar nuevo producto   \n",
+       "3          Google Ads     $ 1.000            Aumentar tráfico   \n",
+       "4  Correo Electrónico       $ 600            Fomentar compras   \n",
+       "\n",
+       "      Tipo_Campaña       Estado  \n",
+       "0         Búsqueda   Finalizada  \n",
+       "1   Redes Sociales   Finalizada  \n",
+       "2   Redes Sociales     En Curso  \n",
+       "3         Búsqueda  Planificada  \n",
+       "4  Email Marketing     En Curso  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar los datos de los archivos CSV en dataframes\n",
+    "df_campanas = pd.read_csv('Anexos/Anexo 1 - Campanhas.csv', delimiter=';', encoding='latin1')\n",
+    "df_metricas = pd.read_csv('Anexos/Anexo 2 - Metricas.csv', delimiter=';', encoding='latin1')\n",
+    "df_audiencias = pd.read_csv('Anexos/Anexo 3 - Audiencias.csv', delimiter=';', encoding='latin1')\n",
+    "\n",
+    "df_campanas.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Renombrar la columna 'ID_Campaña' a 'ID_Campana'\n",
+    "df_campanas.rename(columns={'ID_Campaña': 'ID_Campana'}, inplace=True)\n",
+    "df_metricas.rename(columns={'ID_Campaña': 'ID_Campana'}, inplace=True)\n",
+    "df_audiencias.rename(columns={'ID_Campaña': 'ID_Campana'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Realizar el merge de los dataframes por el ID de campaña\n",
+    "merged_df = df_campanas.merge(df_metricas, on='ID_Campana').merge(df_audiencias, on='ID_Campana')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID_Campana</th>\n",
+       "      <th>Nombre</th>\n",
+       "      <th>Fecha_Inicio</th>\n",
+       "      <th>Fecha_Fin</th>\n",
+       "      <th>Plataforma</th>\n",
+       "      <th>Presupuesto</th>\n",
+       "      <th>Objetivo</th>\n",
+       "      <th>Tipo_Campaña</th>\n",
+       "      <th>Estado</th>\n",
+       "      <th>ID_Métrica</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Tasa_Conversión</th>\n",
+       "      <th>Ingreso_Generado</th>\n",
+       "      <th>Rebotes</th>\n",
+       "      <th>Tasa_rebote</th>\n",
+       "      <th>ID_Audiencia</th>\n",
+       "      <th>Edad</th>\n",
+       "      <th>Género</th>\n",
+       "      <th>Intereses</th>\n",
+       "      <th>Comportamiento</th>\n",
+       "      <th>Ubicación</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Campaña Verano 2023</td>\n",
+       "      <td>1/06/2023</td>\n",
+       "      <td>30/06/2023</td>\n",
+       "      <td>Google Ads</td>\n",
+       "      <td>$ 1.200</td>\n",
+       "      <td>Aumentar ventas</td>\n",
+       "      <td>Búsqueda</td>\n",
+       "      <td>Finalizada</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2,00%</td>\n",
+       "      <td>$ 500</td>\n",
+       "      <td>245</td>\n",
+       "      <td>49,00%</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>Femenino</td>\n",
+       "      <td>Tecnología, Viajes</td>\n",
+       "      <td>Búsqueda de Productos</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Campaña Verano 2023</td>\n",
+       "      <td>1/06/2023</td>\n",
+       "      <td>30/06/2023</td>\n",
+       "      <td>Google Ads</td>\n",
+       "      <td>$ 1.200</td>\n",
+       "      <td>Aumentar ventas</td>\n",
+       "      <td>Búsqueda</td>\n",
+       "      <td>Finalizada</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2,00%</td>\n",
+       "      <td>$ 500</td>\n",
+       "      <td>245</td>\n",
+       "      <td>49,00%</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18-24</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Moda, Entretenimiento</td>\n",
+       "      <td>Interacción en Redes</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Campaña Verano 2023</td>\n",
+       "      <td>1/06/2023</td>\n",
+       "      <td>30/06/2023</td>\n",
+       "      <td>Google Ads</td>\n",
+       "      <td>$ 1.200</td>\n",
+       "      <td>Aumentar ventas</td>\n",
+       "      <td>Búsqueda</td>\n",
+       "      <td>Finalizada</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2,00%</td>\n",
+       "      <td>$ 600</td>\n",
+       "      <td>302</td>\n",
+       "      <td>50,33%</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>Femenino</td>\n",
+       "      <td>Tecnología, Viajes</td>\n",
+       "      <td>Búsqueda de Productos</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Campaña Verano 2023</td>\n",
+       "      <td>1/06/2023</td>\n",
+       "      <td>30/06/2023</td>\n",
+       "      <td>Google Ads</td>\n",
+       "      <td>$ 1.200</td>\n",
+       "      <td>Aumentar ventas</td>\n",
+       "      <td>Búsqueda</td>\n",
+       "      <td>Finalizada</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2,00%</td>\n",
+       "      <td>$ 600</td>\n",
+       "      <td>302</td>\n",
+       "      <td>50,33%</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18-24</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Moda, Entretenimiento</td>\n",
+       "      <td>Interacción en Redes</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Campaña Verano 2023</td>\n",
+       "      <td>1/06/2023</td>\n",
+       "      <td>30/06/2023</td>\n",
+       "      <td>Google Ads</td>\n",
+       "      <td>$ 1.200</td>\n",
+       "      <td>Aumentar ventas</td>\n",
+       "      <td>Búsqueda</td>\n",
+       "      <td>Finalizada</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2,00%</td>\n",
+       "      <td>$ 400</td>\n",
+       "      <td>134</td>\n",
+       "      <td>33,50%</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>Femenino</td>\n",
+       "      <td>Tecnología, Viajes</td>\n",
+       "      <td>Búsqueda de Productos</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ID_Campana               Nombre Fecha_Inicio   Fecha_Fin  Plataforma  \\\n",
+       "0          1  Campaña Verano 2023    1/06/2023  30/06/2023  Google Ads   \n",
+       "1          1  Campaña Verano 2023    1/06/2023  30/06/2023  Google Ads   \n",
+       "2          1  Campaña Verano 2023    1/06/2023  30/06/2023  Google Ads   \n",
+       "3          1  Campaña Verano 2023    1/06/2023  30/06/2023  Google Ads   \n",
+       "4          1  Campaña Verano 2023    1/06/2023  30/06/2023  Google Ads   \n",
+       "\n",
+       "  Presupuesto         Objetivo Tipo_Campaña      Estado  ID_Métrica  ...  \\\n",
+       "0     $ 1.200  Aumentar ventas     Búsqueda  Finalizada           1  ...   \n",
+       "1     $ 1.200  Aumentar ventas     Búsqueda  Finalizada           1  ...   \n",
+       "2     $ 1.200  Aumentar ventas     Búsqueda  Finalizada           2  ...   \n",
+       "3     $ 1.200  Aumentar ventas     Búsqueda  Finalizada           2  ...   \n",
+       "4     $ 1.200  Aumentar ventas     Búsqueda  Finalizada           7  ...   \n",
+       "\n",
+       "  Tasa_Conversión  Ingreso_Generado  Rebotes Tasa_rebote  ID_Audiencia   Edad  \\\n",
+       "0           2,00%             $ 500      245      49,00%             1  25-34   \n",
+       "1           2,00%             $ 500      245      49,00%             2  18-24   \n",
+       "2           2,00%             $ 600      302      50,33%             1  25-34   \n",
+       "3           2,00%             $ 600      302      50,33%             2  18-24   \n",
+       "4           2,00%             $ 400      134      33,50%             1  25-34   \n",
+       "\n",
+       "      Género              Intereses         Comportamiento  Ubicación   \n",
+       "0   Femenino     Tecnología, Viajes  Búsqueda de Productos           A  \n",
+       "1  Masculino  Moda, Entretenimiento   Interacción en Redes           C  \n",
+       "2   Femenino     Tecnología, Viajes  Búsqueda de Productos           A  \n",
+       "3  Masculino  Moda, Entretenimiento   Interacción en Redes           C  \n",
+       "4   Femenino     Tecnología, Viajes  Búsqueda de Productos           A  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mostrar el dataframe resultante\n",
+    "merged_df.head()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
